MyDev/src/objects/AddNumbers__c.object
<CustomObject>
    <fields>
        <fullName>FirstNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>First  Number</description>
        <label>FirstNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Output__c</fullName>
        <description>Output</description>
        <formula>FirstNumber__c  +  SecondNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Output</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecondNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Second Number</description>
        <label>Second Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AddNumbers</label>
    <nameField>
        <label>AddNumbers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AddNumbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>